--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# ?????? ?? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/db_connect
+spring.datasource.username=eunbin
+spring.datasource.password=eunbin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ?? ??? ??
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
+
+server.port=8080
